#1 Whitespace no longer flattens tile.

--- a/src/index.css
+++ b/src/index.css
@@ -57,27 +57,20 @@
 .game-board {
     max-width: 750px;
     display: grid;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    grid-template-rows: repeat(9, 11.11%);
+    /* grid-auto-columns: auto; */
     border: 0.2em solid black;
 }
 
 .board-row {
     display: grid;
-    grid-row-start: 1;
-    grid-row-end: 3;
-    grid-template-rows: auto 1fr auto;
-}
-
-.squares-collection {
-    border: 0.1em solid black;
+    grid-template-columns: repeat(9, 11.11%);
+    /* grid-auto-rows: auto; */
 }
 
 .tile {
-    min-width: 33.33%;
-    min-height: 33.33%;
     padding: 0.1em;
-    border: 0.1em solid black;
+    border: 0.05em solid black;
     font-size: 2.5em;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #fff;
@@ -99,7 +92,10 @@
     width: 10%;
     height: 10%;
     padding: 0.1em;
-    border: 0.1em solid black;
+    border-top: 0.1em solid black;
+    border-bottom: 0.1em solid black;
+    border-left: 0.05em solid black;
+    border-right: 0.05em solid black;
     font-size:2.5em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #fff;
